Travis: remote debugging travis fun